agregar: enlace a GitHub en el título del proyecto ArchiveSphere

--- a/index.html
+++ b/index.html
@@ -298,16 +298,15 @@
 
                         <!-- Proyecto destacado -->
                         <div class="project-card" role="region" aria-labelledby="archivesphere-title">
-                            <h3 id="archivesphere-title">ArchiveSphere</h3>
-                            <p>
-                                Web para gestión de archivos y automatización de
-                                backups. Tecnologías principales: <strong>Laravel</strong>, <strong>Vue.js</strong> y <strong>TypeScript</strong>.
-                            </p>
-                            <p class="centered"><a href="https://github.com/lpdadpl/Archivesphere.git" target="_blank" rel="noopener">Ver en GitHub</a></p>
-
-                            <!-- Estadísticas GitHub -->
-                            <div class="project-stats centered" aria-hidden="true">
-                                <img src="https://github-readme-stats.vercel.app/api/top-langs?username=lpdadpl&show_icons=true&theme=dark&locale=en&layout=compact&langs_count=10" alt="Top languages" />
++                            <h3 id="archivesphere-title">
++                                <a href="https://github.com/lpdadpl/Archivesphere.git" target="_blank" rel="noopener noreferrer" style="color:inherit; text-decoration:underline;">
++                                    ArchiveSphere
++                                </a>
++                            </h3>
+                             <p>
+                                 Web para gestión de archivos y automatización de
+                                 backups. Tecnologías principales: <strong>Laravel</strong>, <strong>Vue.js</strong> y <strong>TypeScript</strong>.
+                             </p>
                             </div>
                         </div>
                     </div>
