agregar: corregir formato del título del proyecto ArchiveSphere en index.html

--- a/index.html
+++ b/index.html
@@ -298,11 +298,11 @@
 
                         <!-- Proyecto destacado -->
                         <div class="project-card" role="region" aria-labelledby="archivesphere-title">
-+                            <h3 id="archivesphere-title">
-+                                <a href="https://github.com/lpdadpl/Archivesphere.git" target="_blank" rel="noopener noreferrer" style="color:inherit; text-decoration:underline;">
-+                                    ArchiveSphere
-+                                </a>
-+                            </h3>
+                            <h3 id="archivesphere-title">
+                                <a href="https://github.com/lpdadpl/Archivesphere.git" target="_blank" rel="noopener noreferrer" style="color:inherit; text-decoration:underline;">
+                                    ArchiveSphere
+                                </a>
+                           </h3>
                              <p>
                                  Web para gestión de archivos y automatización de
                                  backups. Tecnologías principales: <strong>Laravel</strong>, <strong>Vue.js</strong> y <strong>TypeScript</strong>.
