eliminar: comentarios de sección de proyectos en index.html

--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
                     <h2 class="section-title"><span class="section-icon" aria-hidden>📁</span> Proyectos</h2>
 
                     <div class="projects-inner" style="width:100%">
-                        <div class="hero-emoji" aria-hidden="true">🚧</div>
-                        <p class="lead">Estamos trabajando en ello</p>
+                        <!-- <div class="hero-emoji" aria-hidden="true">🚧</div>
+                        <p class="lead">Estamos trabajando en ello</p> -->
 
                         <!-- Proyecto destacado -->
                         <div class="project-card" role="region" aria-labelledby="archivesphere-title">
