agregar: actualizar imagen de perfil y comentar sección de contacto en index.html

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="hero-text">
                         <h1>
                             Hola, soy Alberto de Pablo López
-                            <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="35" alt="wave" style="vertical-align:middle;margin-left:0.5rem" />
+                            <img src="/pfp.jpg" width="35" alt="wave" style="vertical-align:middle;margin-left:0.5rem" />
                         </h1>
                         <p>
                             Apasionado profesional con experiencia en atención
@@ -392,7 +392,7 @@
                 </div>
             </section>
 
-            <section id="contact" class="section section-alt">
+            <!-- <section id="contact" class="section section-alt">
                 <div class="container">
                     <h2 class="section-title"><span class="section-icon" aria-hidden>✉️</span> Contacto</h2>
                     <p>
@@ -449,7 +449,7 @@
                         </div>
                     </form>
                 </div>
-            </section>
+            </section> -->
         </main>
 
         <footer class="site-footer">
