--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <!-- Banner agregado -->
             <section class="banner-section" aria-hidden="true">
                 <div class="container">
-                    <img src="Header.png" alt="Banner" style="width:100%;height:auto;display:block;margin:0 auto 1rem" />
+                    <img src="/" alt="Banner" style="width:100%;height:auto;display:block;margin:0 auto 1rem" />
                 </div>
             </section>
 
@@ -182,7 +182,7 @@
                     </div>
                     <div class="hero-media">
                         <div class="avatar" aria-hidden="true">
-                            <img src="@pfp.jpg" alt="Alberto de Pablo" class="avatar-img" />
+                            <img src="/pfp.jpg" alt="Alberto de Pablo" class="avatar-img" />
                         </div>
                     </div>
                 </div>
