actualizar sección de presentación y eliminar contenido redundante en index.html

--- a/index.html
+++ b/index.html
@@ -151,14 +151,17 @@
                             <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="35" alt="wave" style="vertical-align:middle;margin-left:0.5rem" />
                         </h1>
                         <p>
-                            Apasionado profesional con experiencia en atención
-                            al cliente y gestión de proyectos. Mi adaptabilidad,
-                            capacidad para trabajar en equipo y habilidades
-                            interpersonales me permiten abordar desafíos de
-                            manera eficiente. Aspiro a integrarme en un entorno
-                            colaborativo donde pueda aportar una visión
-                            práctica, enfocada en resultados y con un enfoque
-                            metódico en cada proyecto.
+                            Apasionado profesional con formación en desarrollo web y dietética.
+                            Tengo experiencia en atención al cliente y gestión de proyectos,
+                            y destaque por mi adaptabilidad, trabajo en equipo y rapidez de aprendizaje.
+                            Domino tecnologías web (Laravel, Vue.js, TypeScript) y bases de datos,
+                            y puedo diseñar y mantener aplicaciones que priorizan usabilidad y seguridad.
+                            Busco integrarme en entornos colaborativos donde aportar una visión práctica
+                            y orientada a resultados.
+                        </p>
+                        <p style="margin-top:.5rem;color:var(--muted);font-size:.95rem">
+                            Formación destacada: GFPS DAW Dual (IES Pio Baroja, 2023–2025) y GFPS Dietética
+                            (Escuela Profesional Javeriana, 2023).
                         </p>
 
                         <!-- Social / enlaces rápidos -->
@@ -170,20 +173,11 @@
                                 <img src="https://skillicons.dev/icons?i=github&theme=dark" alt="GitHub" style="height:32px" />
                             </a>
                         </p>
-
-                        <div class="cta-group">
-                            <a href="#projects" class="btn btn-primary"
-                                >Ver proyectos</a
-                            >
-                            <a href="#contact" class="btn btn-ghost"
-                                >Contactar</a
-                            >
-                        </div>
                     </div>
                     <div class="hero-media">
-                        <!-- <div class="avatar" aria-hidden="true">
+                        <div class="avatar" aria-hidden="true">
                             <img src="/pfp.jpg" alt="Alberto de Pablo" class="avatar-img" />
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </section>
@@ -199,57 +193,6 @@
                         <li>
                             <strong>GFPS Dietética</strong> - Escuela
                             Profesional Javeriana (2023)
-                        </li>
-                    </ul>
-                </div>
-            </section>
-
-            <section id="about" class="section">
-                <div class="container">
-                    <h2 class="section-title"><span class="section-icon" aria-hidden>🧑‍💻</span> Sobre mí</h2>
-                    <p>
-                        Profesional con formación en desarrollo web y dietética,
-                        capacitado para diseñar, desarrollar y mantener
-                        aplicaciones web dinámicas, asegurando funcionalidad,
-                        usabilidad y seguridad. Dominio de lenguajes de
-                        programación, bases de datos y tecnologías web.
-                        Formación integral en nutrición y dietética, con
-                        capacidad para diseñar, gestionar y supervisar planes
-                        alimentarios personalizados, promoviendo hábitos
-                        saludables y adaptados a las necesidades específicas.
-                    </p>
-                    <ul class="skills">
-                        <li>Comunicación efectiva</li>
-                        <li>Pensamiento crítico</li>
-                        <li>Creatividad</li>
-                        <li>Orientación a resultados</li>
-                        <li>Resolución de problemas</li>
-                        <li>Rápida capacidad de aprendizaje</li>
-                        <li>Trabajo en equipo</li>
-                        <li>Adaptabilidad</li>
-                        <li>Autogestión</li>
-                        <li>Resiliencia</li>
-                    </ul>
-
-                    <h3>Skills adicionales</h3>
-                    <ul class="skills">
-                        <li>GFPS DAW Dual- IES Pio Baroja 2023 - 2025</li>
-                        <li>
-                            GFPS Dietética - Escuela Profesional Javeriana 2023
-                        </li>
-                        <li>
-                            Capacitado para diseñar, desarrollar y mantener
-                            aplicaciones web dinámicas
-                        </li>
-                        <li>
-                            Dominio de lenguajes de programación, bases de datos
-                            y tecnologías web
-                        </li>
-                        <li>Formación integral en nutrición y dietética</li>
-                        <li>
-                            Conocimientos en evaluación nutricional, elaboración
-                            de dietas, control de la calidad alimentaria y
-                            educación nutricional
                         </li>
                     </ul>
                 </div>
