actualizar sección de educación: eliminar contenido redundante y agregar detalles sobre formación y competencias

--- a/index.html
+++ b/index.html
@@ -159,11 +159,6 @@
                             Busco integrarme en entornos colaborativos donde aportar una visión práctica
                             y orientada a resultados.
                         </p>
-                        <p style="margin-top:.5rem;color:var(--muted);font-size:.95rem">
-                            Formación destacada: GFPS DAW Dual (IES Pio Baroja, 2023–2025) y GFPS Dietética
-                            (Escuela Profesional Javeriana, 2023).
-                        </p>
-
                         <!-- Social / enlaces rápidos -->
                         <p style="margin:0.5rem 0">
                             <a href="https://www.linkedin.com/in/albertodpablo/" target="_blank" aria-label="LinkedIn">
@@ -174,26 +169,41 @@
                             </a>
                         </p>
                     </div>
-                    <div class="hero-media">
+                    <!-- <div class="hero-media">
                         <div class="avatar" aria-hidden="true">
                             <img src="/pfp.jpg" alt="Alberto de Pablo" class="avatar-img" />
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </section>
 
             <section id="education" class="section section-alt">
                 <div class="container">
                     <h2 class="section-title"><span class="section-icon" aria-hidden>🎓</span> Educación</h2>
+
+                    <p style="margin-bottom:0.6rem; color:var(--muted)">
+                        Formación técnica y práctica orientada al desarrollo de aplicaciones web y al trabajo en entornos profesionales.
+                    </p>
+
                     <ul>
                         <li>
-                            <strong>GFPS DAW Dual</strong> - IES Pio Baroja
-                            (2023 - 2025)
+                            <strong>GFPS DAW Dual</strong> - IES Pio Baroja (2023 - 2025)<br />
+                            Programa en modalidad dual combinando formación en el centro y prácticas en empresa. Módulos destacados:
+                            Desarrollo web (HTML, CSS, JavaScript/TypeScript), programación en servidor (PHP, Laravel), bases de datos (MySQL, PostgreSQL), sistemas y DevOps básicos (Docker, despliegue), y buenas prácticas de seguridad y accesibilidad.
                         </li>
-                        <li>
-                            <strong>GFPS Dietética</strong> - Escuela
-                            Profesional Javeriana (2023)
+                        <li style="margin-top:.5rem">
+                            <strong>GFPS Dietética</strong> - Escuela Profesional Javeriana (2023)<br />
+                            Formación complementaria en nutrición y control de calidad alimentaria; aporta enfoque analítico y gestión documental útil en proyectos de software relacionados con datos de salud y procesos.
                         </li>
+                    </ul>
+
+                    <h3 style="margin-top:0.75rem">Competencias y logros</h3>
+                    <ul>
+                        <li>Desarrollo con Laravel y Vue.js + TypeScript; integración frontend/backend.</li>
+                        <li>Modelado y optimización de bases de datos; generación automatizada de informes/PDFs.</li>
+                        <li>Uso de Git/GitHub, Docker y flujos básicos de CI; despliegue y pruebas funcionales.</li>
+                        <li>Trabajo en equipo en entorno empresarial durante las prácticas; entregas orientadas a requisitos reales.</li>
+                        <li>Proyecto destacado en formación: <a href="https://github.com/lpdadpl/Archivesphere.git" target="_blank" rel="noopener noreferrer">ArchiveSphere</a>.</li>
                     </ul>
                 </div>
             </section>
