ajustar: reducir padding inferior del hero y eliminar contenido redundante en la sección de competencias

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                 background: transparent !important;
             }
 
+            /* Reducir padding inferior del hero para compactar la sección */
+            #hero {
+                padding-bottom: 1rem; /* ajustar valor según necesites */
+            }
+
             /* Estilos generales y accesibilidad */
             a { color: var(--accent); text-decoration: underline; }
             a:focus, button:focus { outline: 3px solid rgba(124,195,255,0.25); outline-offset: 2px; }
@@ -197,14 +202,6 @@
                         </li>
                     </ul>
 
-                    <h3 style="margin-top:0.75rem">Competencias y logros</h3>
-                    <ul>
-                        <li>Desarrollo con Laravel y Vue.js + TypeScript; integración frontend/backend.</li>
-                        <li>Modelado y optimización de bases de datos; generación automatizada de informes/PDFs.</li>
-                        <li>Uso de Git/GitHub, Docker y flujos básicos de CI; despliegue y pruebas funcionales.</li>
-                        <li>Trabajo en equipo en entorno empresarial durante las prácticas; entregas orientadas a requisitos reales.</li>
-                        <li>Proyecto destacado en formación: <a href="https://github.com/lpdadpl/Archivesphere.git" target="_blank" rel="noopener noreferrer">ArchiveSphere</a>.</li>
-                    </ul>
                 </div>
             </section>
 
