--- a/index.html
+++ b/index.html
@@ -18,97 +18,112 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <style>
             /* Fondo uniforme para todo el sitio */
-            :root {
-                --bg: #0b1220; /* color de fondo principal (ajustable) */
-                --text: #e6eef8;
-                --muted: #9aa7bf;
-                --accent: #7cc3ff;
-            }
-
-            html, body {
-                height: 100%;
-                margin: 0;
-                padding: 0;
-                background-color: var(--bg);
-                background-image: none !important;
-                color: var(--text);
-                font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-                -webkit-font-smoothing: antialiased;
-                -moz-osx-font-smoothing: grayscale;
-                -webkit-text-size-adjust: 100%;
-            }
-
-            /* Forzar transparencia / ausencia de cortes en secciones */
-            .section,
-            .section-alt,
-            .site-header,
-            .site-footer,
-            .banner-section,
-            .container {
+             :root {
+                 --bg: #0b1220; /* color de fondo principal (ajustable) */
+                 --text: #e6eef8;
+                 --muted: #9aa7bf;
+                 --accent: #7cc3ff;
+             }
+ 
+             html, body {
+                 height: 100%;
+                 margin: 0;
+                 padding: 0;
+                 background-color: var(--bg);
+                 background-image: none !important;
+                 color: var(--text);
+                 font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+                 -webkit-font-smoothing: antialiased;
+                 -moz-osx-font-smoothing: grayscale;
+                 -webkit-text-size-adjust: 100%;
+             }
+ 
+             /* Forzar transparencia / ausencia de cortes en secciones */
+             .section,
+             .section-alt,
+             .site-header,
+             .site-footer,
+             .banner-section,
+             .container {
                 background: transparent !important;
-            }
+             }
 
-            /* Estilos generales y accesibilidad */
-            a { color: var(--accent); text-decoration: underline; }
-            a:focus, button:focus { outline: 3px solid rgba(124,195,255,0.25); outline-offset: 2px; }
-
-            /* Iconos y cuadrícula del stack */
-            .section-icon { font-size: 1.2rem; margin-right: 0.5rem; vertical-align:middle; color:var(--accent); }
-            .tech-grid { display:flex; flex-wrap:wrap; gap:0.6rem; justify-content:center; align-items:center; }
-            .tech-grid a img { height:48px; width:auto; display:block; filter: none; }
-            .section-title { display:flex; align-items:center; gap:0.5rem; justify-content:center; color:var(--text); }
-
-            /* Centrado y ajuste para sección Proyectos */
-            #projects .container{
-                max-width: 900px;
+            /* Ajustes para que el diseño use todo el ancho en escritorio */
+            .container {
+                width: 100%;
+                max-width: none !important;
+                padding-left: 1.5rem;
+                padding-right: 1.5rem;
+                box-sizing: border-box;
                 margin: 0 auto;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                gap: 1rem;
-                padding: 1rem;
-                text-align: center;
             }
-            #projects .hero-emoji{ font-size: 5rem; margin-bottom: 0.5rem; }
-            #projects .lead{ font-size: 1.15rem; margin: 0; color:var(--muted); }
-            #projects .project-card{
-                width: 100%;
-                display: flex;
-                flex-direction: column;
-                gap: 0.75rem;
-                align-items: center;
-                color:var(--text);
+            @media (min-width: 1200px) {
+                /* en pantallas grandes ampliar el padding lateral para aire */
+                .container { padding-left: 3rem; padding-right: 3rem; }
             }
-            #projects .project-card h3{ margin: 0.25rem 0; }
-            #projects .project-stats img{ max-width: 340px; width:100%; height:auto; display:block; margin: 0 auto; }
-            .centered { margin: 0 auto; }
-            @media (min-width: 720px){
-                #projects .project-card{ align-items: flex-start; text-align: left; }
-                #projects .container{ text-align: left; }
-                #projects .project-card .centered{ margin: 0 auto; }
-            }
-
-            /* avatar */
-            .avatar {
-                width: 96px;
-                height: 96px;
-                border-radius: 50%;
-                background: rgba(255,255,255,0.04);
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-weight: 700;
-                color: var(--text);
-                overflow: hidden;
-            }
-            .avatar-img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                display: block;
-            }
-        </style>
+ 
+             /* Estilos generales y accesibilidad */
+             a { color: var(--accent); text-decoration: underline; }
+             a:focus, button:focus { outline: 3px solid rgba(124,195,255,0.25); outline-offset: 2px; }
+ 
+             /* Iconos y cuadrícula del stack */
+             .section-icon { font-size: 1.2rem; margin-right: 0.5rem; vertical-align:middle; color:var(--accent); }
+             .tech-grid { display:flex; flex-wrap:wrap; gap:0.6rem; justify-content:center; align-items:center; }
+             .tech-grid a img { height:48px; width:auto; display:block; filter: none; }
+             .section-title { display:flex; align-items:center; gap:0.5rem; justify-content:center; color:var(--text); }
+ 
+            /* Centrado y ajuste para sección Proyectos (aún usa todo el ancho) */
+             #projects .container{
+                 width: 100%;
+                 max-width: none;
+                 margin: 0 auto;
+                 display: flex;
+                 flex-direction: column;
+                 align-items: center;
+                 justify-content: center;
+                 gap: 1rem;
+                 padding: 1rem;
+                 text-align: center;
+             }
+             #projects .hero-emoji{ font-size: 5rem; margin-bottom: 0.5rem; }
+             #projects .lead{ font-size: 1.15rem; margin: 0; color:var(--muted); }
+             #projects .project-card{
+                 width: 100%;
+                 display: flex;
+                 flex-direction: column;
+                 gap: 0.75rem;
+                 align-items: center;
+                 color:var(--text);
+             }
+             #projects .project-card h3{ margin: 0.25rem 0; }
+             #projects .project-stats img{ max-width: 340px; width:100%; height:auto; display:block; margin: 0 auto; }
+             .centered { margin: 0 auto; }
+             @media (min-width: 720px){
+                 #projects .project-card{ align-items: flex-start; text-align: left; }
+                 #projects .container{ text-align: left; }
+                 #projects .project-card .centered{ margin: 0 auto; }
+             }
+ 
+             /* avatar */
+             .avatar {
+                 width: 96px;
+                 height: 96px;
+                 border-radius: 50%;
+                 background: rgba(255,255,255,0.04);
+                 display: flex;
+                 align-items: center;
+                 justify-content: center;
+                 font-weight: 700;
+                 color: var(--text);
+                 overflow: hidden;
+             }
+             .avatar-img {
+                 width: 100%;
+                 height: 100%;
+                 object-fit: cover;
+                 display: block;
+             }
+         </style>
     </head>
     <body>
         <header class="site-header">
