ajustar: comentar secciones de experiencia y contacto en index.html

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 </div>
             </section>
 
-            <section id="experience" class="section">
+            <!-- <section id="experience" class="section">
                 <div class="container">
                     <h2 class="section-title"><span class="section-icon" aria-hidden>🧾</span> Experiencia profesional</h2>
                     <ul>
@@ -372,7 +372,7 @@
                         </li>
                     </ul>
                 </div>
-            </section>
+            </section> -->
 
             <!-- <section id="contact" class="section section-alt">
                 <div class="container">
