fix: enlaces redes sociales bien colocados

--- a/index.html
+++ b/index.html
@@ -174,15 +174,16 @@
                             Busco integrarme en entornos colaborativos donde aportar una visión práctica
                             y orientada a resultados.
                         </p>
-                        <!-- Social / enlaces rápidos -->
-                        <p style="margin:0.5rem 0">
+                            <!-- Social / enlaces rápidos -->
+                        <p style="margin-top:1rem; display:flex; align-items:center; gap:0.5rem;">
                             <a href="https://www.linkedin.com/in/albertodpablo/" target="_blank" aria-label="LinkedIn">
-                                <img src="https://skillicons.dev/icons?i=linkedin&theme=dark" alt="LinkedIn" style="height:32px" />
+                                <img src="https://skillicons.dev/icons?i=linkedin&theme=dark" alt="LinkedIn" style="height:32px; vertical-align:middle;" />
                             </a>
-                            <a href="https://github.com/lpdadpl" target="_blank" aria-label="GitHub" style="margin-left:0.5rem">
-                                <img src="https://skillicons.dev/icons?i=github&theme=dark" alt="GitHub" style="height:32px" />
+                            <a href="https://github.com/lpdadpl" target="_blank" aria-label="GitHub">
+                                <img src="https://skillicons.dev/icons?i=github&theme=dark" alt="GitHub" style="height:32px; vertical-align:middle;" />
                             </a>
                         </p>
+
                     </div>
                     <!-- <div class="hero-media">
                         <div class="avatar" aria-hidden="true">
