--- a/index.html
+++ b/index.html
@@ -137,7 +137,11 @@
                         aria-controls="primaryMenu"
                         aria-label="Abrir menú"
                     >
-                        <span></span><span></span><span></span>
+                        <svg class="nav-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="nav-icon-line nav-icon-line-top" d="M3 6h18" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"/>
+                            <path class="nav-icon-line nav-icon-line-middle" d="M3 12h18" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"/>
+                            <path class="nav-icon-line nav-icon-line-bottom" d="M3 18h18" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"/>
+                        </svg>
                     </button>
                     <ul id="primaryMenu">
                         <li><a href="#hero">Inicio</a></li>
