--- a/index.html
+++ b/index.html
@@ -459,13 +459,19 @@
                             </svg>
                             <span class="social-text">GitHub</span>
                         </a>
-                        
-                        <a href="mailto:albertodepablolopez@gmail.com" class="social-link" aria-label="Email">
+                        <button onclick="copyEmail()" class="social-link" aria-label="Email">
                             <svg class="social-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 24px; height: 24px;">
                                 <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" fill="currentColor"/>
                             </svg>
                             <span class="social-text">Email</span>
-                        </a>
+                            <span id="email-feedback" style="display: none; margin-left: 8px; font-size: 0.9em; color: #10b981;">¡Copiado!</span>
+                        </button>
+                        <!-- <a href="mailto:albertodepablolopez@gmail.com" class="social-link" aria-label="Email">
+                            <svg class="social-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 24px; height: 24px;">
+                                <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" fill="currentColor"/>
+                            </svg>
+                            <span class="social-text">Email</span>
+                        </a> -->
                     </div>
                 </div>
             </section>
