--- a/index.html
+++ b/index.html
@@ -441,7 +441,8 @@
             <section id="contact" class="section section-alt">
                 <div class="container">
                     <h2 class="section-title"><span class="section-icon" aria-hidden>✉️</span> Contacto</h2>
-                    <p style="margin-bottom: 2rem; color: var(--muted);">
+                    <!-- <p style="margin-bottom: 2rem; color: var(--muted);"> -->
+                    <p style="margin-bottom: 2rem; color: white;">
                         ¿Quieres ponerte en contacto conmigo? Puedes encontrarme en:
                     </p>
                     
